# malt_anim

./: CMakeLists.txt  malt_anim-config.cmake  module.json
assets/: skinned.vert
include/malt_anim/: joint.hpp  module.hpp  skeleton.hpp  skeleton_loader.hpp  skinned_mesh.hpp  skinned_mesh_loader.hpp  sqt.hpp
include/malt_anim/components/: skinned_mesh_renderer.hpp
src/: module.cpp  skeleton_loader.cpp  skinned_mesh.cpp  skinned_mesh_renderer.cpp
tests/: test.cpp
